[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis loader — pip vs Poetry demo"
authors = ["Marek Macku <marek.macku@apify.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=2.1,<3"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.10,<4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
